<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="xPlanarErrorHandling" Id="{55eda779-33a1-444a-9c3a-a8daf9dafe63}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK xPlanarErrorHandling
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	Running			: BYTE;
	
	i				: BYTE;
	State			: BYTE;
	CommandDone		: BOOL;
	
	ResetDone		: BOOL;
	ErrorDetected	: BOOL;
	ErrorCount		: INT;
	ErrorTrigger	: R_Trig;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
Running := Running + 1;

DetectErrors();

ErrorCounter();

ResetErrors();]]></ST>
    </Implementation>
    <Method Name="DetectErrors" Id="{010aa0d9-eca0-4038-9ff3-7c9c3593edec}">
      <Declaration><![CDATA[METHOD DetectErrors : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
FOR i := 1 TO xPlanarLink.MoverCount DO
	IF xPlanarLink.PlanarMover[i].Error THEN
		ErrorDetected := TRUE;
	END_IF
END_FOR
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ErrorCounter" Id="{7ad35de8-3e39-49fa-9986-7e86c77060b7}">
      <Declaration><![CDATA[METHOD ErrorCounter : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
ErrorTrigger(CLK := ErrorDetected);

IF ErrorTrigger.Q THEN
	ErrorCount := ErrorCount + 1;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="ResetErrors" Id="{8372b3d2-7b21-40df-b1c7-03c57c4fc61a}">
      <Declaration><![CDATA[METHOD ResetErrors : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF ErrorDetected THEN

	CASE State OF
		
		0: 
			ResetDone := FALSE;
			FOR i := 1 TO xPlanarLink.MoverCount DO
				xPlanarLink.PlanarMover[i].Reset(xPlanarLink.PlanarFeedback[i]);
			END_FOR
			State := 1;
		
		1:	
			IF xPlanarLink.PlanarFeedback[1].Done AND xPlanarLink.PlanarFeedback[2].Done THEN
				CommandDone := FALSE;
				State := 2;
			END_IF
				
		2:
			ResetDone := TRUE;
		
	END_CASE	


END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="xPlanarErrorHandling">
      <LineId Id="18" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="24" Count="0" />
    </LineIds>
    <LineIds Name="xPlanarErrorHandling.DetectErrors">
      <LineId Id="29" Count="1" />
      <LineId Id="33" Count="0" />
      <LineId Id="35" Count="1" />
      <LineId Id="34" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="xPlanarErrorHandling.ErrorCounter">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="9" Count="1" />
    </LineIds>
    <LineIds Name="xPlanarErrorHandling.ResetErrors">
      <LineId Id="9" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="20" Count="4" />
      <LineId Id="19" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="31" Count="2" />
      <LineId Id="26" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="34" Count="2" />
      <LineId Id="15" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>