<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="xPlanarUtility" Id="{275caf48-8ada-48c8-87c5-223e20d4cd4a}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK xPlanarUtility
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	Running			: BYTE;	

	i				: BYTE;
	MoverEnabled	: ARRAY [1..xPlanarLink.MoverCount] OF BOOL;
	MoverInError	: ARRAY [1..xPlanarLink.MoverCount] OF BOOL;
	MoverBusy		: ARRAY [1..xPlanarLink.MoverCount] OF BOOL;
	MoverDone		: Array [1..xPlanarLink.MoverCount] OF BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
Running := Running + 1;

UpdateObject();

ReadStatus();]]></ST>
    </Implementation>
    <Method Name="ReadStatus" Id="{232dbaf6-8115-48c1-9a63-e2b1a144d824}">
      <Declaration><![CDATA[METHOD ReadStatus : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
FOR i := 1 TO xPlanarLink.MoverCount DO
	
	IF xPlanarLink.PlanarMover[i].MCTOPLC.STD.State = 3 THEN
		MoverEnabled[i] := TRUE;
	ELSE
		MoverEnabled[i] := FALSE;
	END_IF
	
	MoverInError[i] := xPlanarLink.PlanarFeedback[i].Error;
	
	MoverBusy[i] := xPlanarLink.PlanarFeedback[i].Busy;
	
	MoverDone[i] := xPlanarLink.PlanarFeedback[i].Done;
	
END_FOR]]></ST>
      </Implementation>
    </Method>
    <Method Name="UpdateObject" Id="{27b8a20c-c40d-4aae-ae59-bfc6ede242c6}">
      <Declaration><![CDATA[METHOD UpdateObject : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
FOR i := 1 TO xPlanarLink.MoverCount DO
	xPlanarLink.PlanarMover[i].Update();
	xPlanarLink.PlanarFeedback[i].Update();
END_FOR]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="xPlanarUtility">
      <LineId Id="14" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="30" Count="0" />
    </LineIds>
    <LineIds Name="xPlanarUtility.ReadStatus">
      <LineId Id="7" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="14" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="35" Count="2" />
      <LineId Id="29" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="30" Count="1" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="xPlanarUtility.UpdateObject">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="8" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>